[package]
name = "rustybox"
version = "0.1.0"
authors = ["rikodao <rikodao@gmail.com>"]
repository = "https://github.com/rikodao/rustybox"
readme = "README.md"
edition = "2018"
license = "MIT"
default-run = "main"

[[bin]]
name = "main"
path = "src/main.rs"

[badges]
github = { repository = "rikodao/rustybox", workflow = "Rust" }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34"

